--- a/src/app/pages/game/game.component.scss
+++ b/src/app/pages/game/game.component.scss
@@ -3,11 +3,13 @@
   flex-direction: column;
   height: 100vh;
   width: 100%;
+  overflow: hidden;
   background: var(--app-bg);
 
   .game-content {
     flex: 1;
     overflow-y: auto;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     background: var(--app-bg);
